# job-watcher

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yaml
examples/: leaderboard.rs
src/: config.rs  defaults.rs  lib.rs  rest_api.rs  slack.rs
src/validators/: mod.rs
templates/: status.html
