[package]
name = "job-watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
askama = "0.14.0"
axum = { version = "0.8.4", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"]}
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
  "cors",
  "limit",
  "timeout",
  "trace",
] }
tracing = "0.1.41"
