[package]
name = "job-watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
askama = "0.14.0"
axum = { version = "0.8.8", features = ["json"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
jiff = { version = "0.2.19", features = ["serde"]}
tokio = { version = "1.49.0", features = ["rt-multi-thread"]}
tower = "0.5.3"
tower-http = { version = "0.6.8", features = [
  "cors",
  "limit",
  "timeout",
  "trace",
] }
tracing = "0.1.44"
